creando entidad Clientes

--- a/Tarea6/Tarea6.csproj
+++ b/Tarea6/Tarea6.csproj
@@ -66,6 +66,7 @@
     <Compile Include="BLL\IRepository.cs" />
     <Compile Include="BLL\RepositorioBase.cs" />
     <Compile Include="DAL\Contexto.cs" />
+    <Compile Include="Entidades\Clientes.cs" />
     <Compile Include="Entidades\Personas.cs" />
     <Compile Include="Entidades\TipoPersonas.cs" />
     <Compile Include="MainForm.cs">
