creando entidad estados

--- a/Tarea6/Tarea6.csproj
+++ b/Tarea6/Tarea6.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Entidades\Cargos.cs" />
     <Compile Include="Entidades\Clientes.cs" />
     <Compile Include="Entidades\Empleados.cs" />
+    <Compile Include="Entidades\Estados.cs" />
     <Compile Include="Entidades\Personas.cs" />
     <Compile Include="Entidades\TipoPersonas.cs" />
     <Compile Include="MainForm.cs">
