--- a/Tarea6/Tarea6.csproj
+++ b/Tarea6/Tarea6.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Entidades\Empleados.cs" />
     <Compile Include="Entidades\Estados.cs" />
     <Compile Include="Entidades\Personas.cs" />
+    <Compile Include="Entidades\Proveedores.cs" />
     <Compile Include="Entidades\TipoPersonas.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
