creando entidad Usuarios

--- a/Tarea6/Tarea6.csproj
+++ b/Tarea6/Tarea6.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Entidades\Personas.cs" />
     <Compile Include="Entidades\Proveedores.cs" />
     <Compile Include="Entidades\TipoPersonas.cs" />
+    <Compile Include="Entidades\Usuarios.cs" />
     <Compile Include="Entidades\Ventas.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
