--- a/Tarea6/Tarea6.csproj
+++ b/Tarea6/Tarea6.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Entidades\Clientes.cs" />
     <Compile Include="Entidades\Empleados.cs" />
     <Compile Include="Entidades\Estados.cs" />
+    <Compile Include="Entidades\Permisos.cs" />
     <Compile Include="Entidades\Personas.cs" />
     <Compile Include="Entidades\Proveedores.cs" />
     <Compile Include="Entidades\TipoPersonas.cs" />
