creando entidad TipoComprobantes

--- a/Tarea6/Tarea6.csproj
+++ b/Tarea6/Tarea6.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Entidades\Permisos.cs" />
     <Compile Include="Entidades\Personas.cs" />
     <Compile Include="Entidades\Proveedores.cs" />
+    <Compile Include="Entidades\TipoComprobantes.cs" />
     <Compile Include="Entidades\TipoPersonas.cs" />
     <Compile Include="Entidades\Usuarios.cs" />
     <Compile Include="Entidades\Usuarios_Has_Permisos.cs" />
