creando entidad Categorias

--- a/Tarea6/Tarea6.csproj
+++ b/Tarea6/Tarea6.csproj
@@ -67,6 +67,7 @@
     <Compile Include="BLL\RepositorioBase.cs" />
     <Compile Include="DAL\Contexto.cs" />
     <Compile Include="Entidades\Cargos.cs" />
+    <Compile Include="Entidades\Categorias.cs" />
     <Compile Include="Entidades\Clientes.cs" />
     <Compile Include="Entidades\Compras.cs" />
     <Compile Include="Entidades\DetalleCompras.cs" />
