creando entidad marcas

--- a/Tarea6/Tarea6.csproj
+++ b/Tarea6/Tarea6.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Entidades\Empleados.cs" />
     <Compile Include="Entidades\Estados.cs" />
     <Compile Include="Entidades\Imagenes.cs" />
+    <Compile Include="Entidades\Marcas.cs" />
     <Compile Include="Entidades\Permisos.cs" />
     <Compile Include="Entidades\Personas.cs" />
     <Compile Include="Entidades\Productos.cs" />
