--- a/Tarea6/Tarea6.csproj
+++ b/Tarea6/Tarea6.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Entidades\Proveedores.cs" />
     <Compile Include="Entidades\TipoComprobantes.cs" />
     <Compile Include="Entidades\TipoPersonas.cs" />
+    <Compile Include="Entidades\UnidadMedidas.cs" />
     <Compile Include="Entidades\Usuarios.cs" />
     <Compile Include="Entidades\Usuarios_Has_Permisos.cs" />
     <Compile Include="Entidades\Ventas.cs" />
