--- a/Tarea6Tests1/Tarea6Tests1.csproj
+++ b/Tarea6Tests1/Tarea6Tests1.csproj
@@ -56,7 +56,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="BLL\RepositorioBaseTests.cs" />
+    <Compile Include="BLL\CargosTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
