--- a/Tarea6Tests4/Tarea6Tests.csproj
+++ b/Tarea6Tests4/Tarea6Tests.csproj
@@ -58,6 +58,8 @@
   <ItemGroup>
     <Compile Include="BLL\CargosTests.cs" />
     <Compile Include="BLL\CategoriaTests.cs" />
+    <Compile Include="BLL\ClientesTests.cs" />
+    <Compile Include="BLL\ComprasTests.cs" />
     <Compile Include="BLL\RepositorioBaseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
