--- a/Tarea6Tests4/Tarea6Tests.csproj
+++ b/Tarea6Tests4/Tarea6Tests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="BLL\ClientesTests.cs" />
     <Compile Include="BLL\ComprasTests.cs" />
     <Compile Include="BLL\EmpleadosTests.cs" />
+    <Compile Include="BLL\EstadosTests.cs" />
     <Compile Include="BLL\RepositorioBaseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
