--- a/Tarea6Tests4/Tarea6Tests.csproj
+++ b/Tarea6Tests4/Tarea6Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="BLL\EstadosTests.cs" />
     <Compile Include="BLL\ImagenesTests.cs" />
     <Compile Include="BLL\MarcasTests.cs" />
+    <Compile Include="BLL\ModelosTests.cs" />
     <Compile Include="BLL\RepositorioBaseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
