--- a/Tarea6Tests4/Tarea6Tests.csproj
+++ b/Tarea6Tests4/Tarea6Tests.csproj
@@ -65,7 +65,7 @@
     <Compile Include="BLL\ImagenesTests.cs" />
     <Compile Include="BLL\MarcasTests.cs" />
     <Compile Include="BLL\ModelosTests.cs" />
-    <Compile Include="BLL\RepositorioBaseTests.cs" />
+    <Compile Include="BLL\PermisosTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
