--- a/Tarea6Tests4/Tarea6Tests.csproj
+++ b/Tarea6Tests4/Tarea6Tests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="BLL\MarcasTests.cs" />
     <Compile Include="BLL\ModelosTests.cs" />
     <Compile Include="BLL\PermisosTests.cs" />
+    <Compile Include="BLL\PersonasTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
