--- a/Tarea6Tests4/Tarea6Tests.csproj
+++ b/Tarea6Tests4/Tarea6Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="BLL\ModelosTests.cs" />
     <Compile Include="BLL\PermisosTests.cs" />
     <Compile Include="BLL\PersonasTests.cs" />
+    <Compile Include="BLL\ProductosTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
