--- a/Tarea6Tests4/Tarea6Tests.csproj
+++ b/Tarea6Tests4/Tarea6Tests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="BLL\PermisosTests.cs" />
     <Compile Include="BLL\PersonasTests.cs" />
     <Compile Include="BLL\ProductosTests.cs" />
+    <Compile Include="BLL\ProveedoresTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
