--- a/Tarea6Tests4/Tarea6Tests.csproj
+++ b/Tarea6Tests4/Tarea6Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="BLL\PersonasTests.cs" />
     <Compile Include="BLL\ProductosTests.cs" />
     <Compile Include="BLL\ProveedoresTests.cs" />
+    <Compile Include="BLL\TipoComprobantesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
