--- a/Tarea6Tests4/Tarea6Tests.csproj
+++ b/Tarea6Tests4/Tarea6Tests.csproj
@@ -71,6 +71,7 @@
     <Compile Include="BLL\ProveedoresTests.cs" />
     <Compile Include="BLL\TipoComprobantesTests.cs" />
     <Compile Include="BLL\TipoPersonasTests.cs" />
+    <Compile Include="BLL\UnidadMedidasTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
