--- a/Tarea6Tests4/Tarea6Tests.csproj
+++ b/Tarea6Tests4/Tarea6Tests.csproj
@@ -73,6 +73,8 @@
     <Compile Include="BLL\TipoPersonasTests.cs" />
     <Compile Include="BLL\UnidadMedidasTests.cs" />
     <Compile Include="BLL\UsuariosTests.cs" />
+    <Compile Include="BLL\Usuarios_PermisosTests.cs" />
+    <Compile Include="BLL\VentasTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
