--- a/Tarea6Tests4/Tarea6Tests.csproj
+++ b/Tarea6Tests4/Tarea6Tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="BLL\CategoriaTests.cs" />
     <Compile Include="BLL\ClientesTests.cs" />
     <Compile Include="BLL\ComprasTests.cs" />
+    <Compile Include="BLL\DetalleComprasTests.cs" />
     <Compile Include="BLL\DetalleVentaTests.cs" />
     <Compile Include="BLL\EmpleadosTests.cs" />
     <Compile Include="BLL\EstadosTests.cs" />
